# battleships

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build
battleships_client/: battleships_client.cppm  meson.build
battleships_server/: CMakeLists.txt  battleships_server.cppm  main.cpp  meson.build
client/: CMakeLists.txt  battleships_client.cppm  main.cpp
include/: CMakeLists.txt  game.cppm  grid.proto  messages.cppm  platform.h.in  socket.h  types.h  wrapped_posix.cppm
server/: CMakeLists.txt  battleships_server.cppm  main.cpp
tests/: fuzz.sh  manyconnections.sh
