cmake_minimum_required(VERSION 3.31)
project(Battleships)
add_compile_options(-Wall)
option(BUILD_SERVER "Build the server executable" ON)
option(BUILD_CLIENT "Build the client executable" ON)
add_subdirectory(include)
if (BUILD_SERVER)
	add_executable(BattleshipsServer)
	target_compile_features(BattleshipsServer PUBLIC cxx_std_23)
	add_subdirectory(server)
endif()
if (BUILD_CLIENT)
	add_executable(BattleshipsClient)
	target_compile_features(BattleshipsClient PUBLIC cxx_std_23)
	add_subdirectory(client)
endif()
