cmake_minimum_required(VERSION 3.28)
project(Battleships)
add_compile_options(-Wall)
option(BUILD_SERVER "Build the server executable" ON)
option(BUILD_CLIENT "Build the client executable" ON)
add_subdirectory(include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
if (BUILD_SERVER)
	add_executable(BattleshipsServer)
	target_compile_features(BattleshipsServer PUBLIC cxx_std_23)
	add_subdirectory(server)
endif()
if (BUILD_CLIENT)
	add_executable(BattleshipsClient)
	add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
	add_subdirectory(vendored/SDL_ttf EXCLUDE_FROM_ALL)
	target_link_libraries(BattleshipsClient PRIVATE SDL3::SDL3 SDL3_ttf::SDL3_ttf)
	target_compile_features(BattleshipsClient PUBLIC cxx_std_23)
	add_subdirectory(client)
endif()
